--- a/todo.txt
+++ b/todo.txt
@@ -5,6 +5,12 @@ For 1.0.0
 Test Fantex!! 
  - test Err
   - test warn (no match)
+  
+Fix the 1 cookie limitation
+
+web elements
+
+
 
 For Future
 ==========
